Wire Frame Operator #39262

Closed
opened 2014-03-19 13:38:25 +01:00 by Cezary Kopias · 17 comments

System Information
win7x64, lenovo y580

Blender Version
Broken: 2.70rc
Worked: 2.69

Short description of error
Wire Frame operator makes wire from selection but delates unselected mesh

Exact steps for others to reproduce the error
EditMode:: CTRL+F --> Wire Frame

**System Information** win7x64, lenovo y580 **Blender Version** Broken: 2.70rc Worked: 2.69 **Short description of error** Wire Frame operator makes wire from selection but delates unselected mesh **Exact steps for others to reproduce the error** EditMode:: CTRL+F --> Wire Frame
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @kopias

Added subscriber: @kopias

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Thomas Dinges self-assigned this 2014-03-19 14:50:20 +01:00

That is not a bug but intentional behavior. If you execute the "Wire Frame "operator, you can change the settings in the F6 popup or in the Toolbar. You can disable the "Replace" option there, the unselected Geometry will then stay.

That is not a bug but intentional behavior. If you execute the "Wire Frame "operator, you can change the settings in the F6 popup or in the Toolbar. You can disable the "Replace" option there, the unselected Geometry will then stay.
Author

dingto: to my knowlage "replace" is also selection wise and means if you want to remove geometry that the wire frame was build on... just fire up 2.69 and give it a try

dingto: to my knowlage "replace" is also selection wise and means if you want to remove geometry that the wire frame was build on... just fire up 2.69 and give it a try

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Added subscriber: @willi-2

Added subscriber: @willi-2

I can reproduce this problem. Note that there is the "Replace" option. If checked, in 2.69, it only replaced the face, but in 2.70, it also deletes unrelated vertices. This should not happen. Independent from the replace option, no vertex needs to be deleted at all. It only decides whether the existing face is to be deleted.

I can reproduce this problem. Note that there is the "Replace" option. If checked, in 2.69, it only replaced the face, but in 2.70, it also deletes unrelated vertices. This should not happen. Independent from the replace option, no vertex needs to be deleted at all. It only decides whether the existing face is to be deleted.

sorry dingto, you were faster. :)

sorry dingto, you were faster. :)

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'

Looks like its a regression indeed - too late to make it into 2.70 though, think this can be fixed for 2.71 (or 2.70a)

Looks like its a regression indeed - too late to make it into 2.70 though, think this can be fixed for `2.71` (or `2.70a`)

Removed subscriber: @ideasman42

Removed subscriber: @ideasman42
Thomas Dinges was unassigned by Campbell Barton 2014-03-19 16:07:56 +01:00
Campbell Barton self-assigned this 2014-03-19 16:07:56 +01:00

Added subscriber: @ian.shi

Added subscriber: @ian.shi

This issue was referenced by blender/blender-addons-contrib@b0a8e4ced1

This issue was referenced by blender/blender-addons-contrib@b0a8e4ced15745b6545de652790391e53cf61628

This issue was referenced by b0a8e4ced1

This issue was referenced by b0a8e4ced15745b6545de652790391e53cf61628

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit b0a8e4ced1.

Closed by commit b0a8e4ced1.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39262
No description provided.