Fix T39262: Regression in 2.70, wire-frame editmode tool replaced all